# ffmpeg_learning

./: .gitignore  kurento.sh  x.conf
android_ffmpeg/: local.properties  settings.gradle.kts
android_ffmpeg/app/: build.gradle.kts
android_ffmpeg/app/src/androidTest/java/com/example/android_ffmpeg/: ExampleInstrumentedTest.java
android_ffmpeg/app/src/main/: AndroidManifest.xml
android_ffmpeg/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android_ffmpeg/app/src/main/java/com/example/android_ffmpeg/: MainActivity.java
android_ffmpeg/app/src/main/java/com/example/android_ffmpeg/utils/: FFUtils.java
android_ffmpeg/app/src/main/java/com/example/android_ffmpeg/widget/: FFVideoView.java
android_ffmpeg/app/src/main/res/layout/: activity_main.xml
android_ffmpeg/app/src/main/res/values/: themes.xml
android_ffmpeg/app/src/main/res/values-night/: themes.xml
android_ffmpeg/gradle/wrapper/: gradle-wrapper.properties
basic/: encoder.sh  format.sh
code/: CMakeLists.txt  readme.md
code/basic/: audio_resample.cpp  decodeVideo.cpp  ffmpeg_dir.cpp  ffmpeg_log.cpp  mediainfo.cpp  timebase.cpp
code/basic/encode_decode/: encode_video.cpp  encode_with_libx264.cpp
code/basic/filter/: drawbox_filter.cpp
code/basic/h264/: AnnexBReader.hpp  BitStream.hpp  EBSP.hpp  Nalu.hpp  NaluPPS.cpp  NaluPPS.hpp  NaluSPS.cpp  NaluSPS.hpp  RBSP.hpp  h264_decoder_main.cpp  readme.md
code/basic/remux/: cutVideo.cpp  extractAudio.cpp  extractVideo.c  mp4parser.cpp  remuxing-from-memory.cpp  remuxing-h264.cpp  remuxing.cpp  utils.c
code/basic/resample/: resample_basic.cpp  resample_video.cpp
code/device/: opendevice.cpp  record_audio.cpp  record_video.cpp
code/excercise/: audioEncoder.cpp  codecEncoderAndMutex.cpp  concat.c  h264ToTs.cpp  merge.c  packet_view.cpp  split.c
code/live_stream/: rtmp_stream.cpp
code/sdl/: first_sdl.c  pcm_player.c  rect.c  simple_player.c  simple_player2.cpp  texture.c  thread_player.cpp  thread_player_video_only.cpp  yuv_player.c
concat-cut/: cut-merge.sh
ffmpeg_cmd/basic/: decoder.sh  others.sh  pix_fmt.sh  protocals.sh
ffmpeg_cmd/concat-cut/: concat.txt  image2video.sh
ffmpeg_cmd/filters/: readme.md  vf_newfilter.c  开发自己的filter.md
ffmpeg_cmd/rawprocess/: pcm.sh
ffmpeg_cmd/recording/: audio_record.sh  prepare.sh  screen_record.sh  video_and_audio.sh
ffmpeg_cmd/rtp/: rtp_sender.sh  rtp_sender_audio.sh
ffmpeg_cmd/推拉流命令/: living.sh
ffmpeg_cmd/设备采集/: device.md
gstreamer/: audio.sh  readme.md  rtp_receive_gs.sh  rtp_sender_gs.sh  transcode.sh  video.sh
gstreamer/demo/: transcode-all.sh  transcode-hls.sh
hls/: cmd.sh
install/: android.md  build_ffmpeg_for_android.sh  readme.md
opencv/: readme.md
opencv/basic/: capture.py  control.py  trackabr.py  video_record.py  win.py
rawprocess/: yuv.sh
recording/: camera_recording.sh
rtmp/: .gitignore  flv.md  rtmp.md  需要注意的问题.md
rtmp/服务器搭建/: playlist.txt  srs.md  stream.sh
rtmp/服务器搭建/server/: Dockerfile  build.sh  docker-compose.yml  nginx.conf
rtp/: rtp_receive.sh  video.sdp  video1.sdp
rtsp/: turorial.md
webrtc/: 1.226.190.115-分析.txt  CMakeLists.txt  Server.cpp  Server.h  main.cpp  mediasoup.md  tcp_send_file  tcp_server_select  多人音视频架构.md  比较有名的异步IO处理库的介绍.md
webrtc/basic/: Server.cpp  Server.h  daemon_process.cpp
webrtc/basic/async/: tcp_server_epoll.cpp  tcp_server_libevent.cpp  tcp_server_select.cpp
webrtc/basic/filesystem/: getopt_tutorial.cpp  myread.cpp  mywrite.cpp
webrtc/basic/http/: http.c
webrtc/basic/pipe/: readme.md  socketpair_demo.cpp
webrtc/basic/sem/: sem_test.cpp
webrtc/basic/signal/: signal.cpp  signal_unsafe.cpp
webrtc/basic/socket/: raw_udp_socket.cpp
webrtc/basic/ss/: my.cpp  readdir.c  tcp_client_ls.cpp  tcp_send_file.cpp
webrtc/basic/tcp/: net_interface.c  tcp_client.cpp  tcp_server.cpp  tcp_server_ipv6.cpp  udp_client.cpp  udp_server.cpp
webrtc/client/: package-lock.json  package.json  server.js  启动.sh
webrtc/client/public/device/: index.html
webrtc/client/public/device/js/: client.js
webrtc/client/public/mediastream/: index.html
webrtc/client/public/mediastream/js/: client.js
webrtc/cppcms_tutorial/: config.js  hello.cpp  hierarchy.cpp  json_cms.cpp  mapping.cpp  server.cpp  server.js
webrtc/libcurl_tutorial/: curl_tutorial.cpp
webrtc/libssh_tutorial/: readme.md  ssh_tutorial.c  tls_openssl_tutorial.c
webrtc/rtsp_server/: network_io.cpp  proxy.cpp  proxy_tvt.cpp  readme.md  rtp.h  rtsp_server.cpp  rtsp_tcp_server.cpp  rtsp_tcp_server_h265.cpp  sdp.txt
webrtc/stun/: stun_client.cpp  stun_server.cpp  utils.cpp  utils.h
webrtc/tcp_send_file.dSYM/Contents/: Info.plist
webrtc/tcp_send_file.dSYM/Contents/Resources/DWARF/: tcp_send_file
webrtc/系列讲座/: 01-整体架构.md  02-webrtc开发环境搭建.md  03-peerconnect_client_demo分析.md
基础知识/: sock5_tranjon.md
基础知识/ICE_DTLS/: Diffie Hellman加密算法.md  Ecc加密算法(椭圆曲线).md  ca.crt  ca.key  dtls.md  ice.md  rsa加密算法.md
基础知识/ICE_DTLS/dh_demo/: alex_key.pem  alex_pub.pem  bob_key.pem  bob_pub.pem  dhp.pem
基础知识/TCP_IP_RTP_RTCP/: arp.md  ip.md  rtcp.md  rtp.md  tcp.md  udp.md
基础知识/TCP_IP_RTP_RTCP_DNS/: dns.md  ip.md  udp.md
基础知识/h264/: h264码流-nalu.md  h264编码理论.md  h264编码的重要参数.md  压缩算法简介.md  基础概念.md  熵编码.md
基础知识/h264/Nalu封装/: nalu-封装.md  rtp对H264的封包格式.pptx
基础知识/h265/: h265.md
基础知识/mp4/: mp4.md
基础知识/openssl/: basic.md
基础知识/openssl/demo/: earch.sha1.hmac  earch.sha256.hmac  earth.my.s  earth.txt  message  message.rsa.sig  message.sha1.sig  message.sha256.sig  msg.sal  my.key  pri.pem  pub.pem  secret.txt
基础知识/sdp/: sdp.md  sdp_answer.txt  sdp_offer.txt
基础知识/stun协议/: nat.md  stun.md
基础知识/原始音频/实战/: audio_record.sh  swift调用ffmpeg函数库
基础知识/原始音频/理论/: 声音.md  处理流程.md  数模转换-音频原始数据.md
基础知识/视频基础/: yuv.sh  图片显示器.md
基础知识/音频编码/实战/: aac.sh
基础知识/音频编码/理论/: AAC编码介绍.md  ADTS格式分析.md  压缩技术基本原理.md
基础知识/音频重采样/: 什么是重采样.md
锁-条件变量/: basic.md
